fixes overflow issue for rows

--- a/packages/insomnia-app/app/ui/css/components/unit-tests.less
+++ b/packages/insomnia-app/app/ui/css/components/unit-tests.less
@@ -1,4 +1,6 @@
 .unit-tests {
+  display: flex;
+  flex-direction: column;
   height: 100%;
   overflow-y: auto;
 
